--- a/Vue/01starting.html
+++ b/Vue/01starting.html
@@ -9,6 +9,10 @@
 
 <body>
     <h1>Hello, Vue js</h1>
+    <div id="app">
+        <p>{{ title }} - {{author}} - {{age}}</p>
+    </div>
     <script src="01app.js"></script>
+
 </body>
 </html>
