"Forma basica de interactividad desde div"

--- a/Vue/01starting.html
+++ b/Vue/01starting.html
@@ -11,6 +11,7 @@
     <h1>Hello, Vue js</h1>
     <div id="app">
         <p>{{ title }} - {{author}} - {{age}}</p>
+        <button v-on:click="age++">age++</button>
     </div>
     <script src="01app.js"></script>
 
