--- a/Vue/01starting.html
+++ b/Vue/01starting.html
@@ -12,6 +12,10 @@
     <div id="app">
         <p>{{ title }} - {{author}} - {{age}}</p>
         <button v-on:click="age++">age++</button>
+        <button v-on:click="age--">age--</button>
+        <div v-on:click="title = 'You will day'">Click over here</div>
+        <div v-on:click="changeAutor">Click there here</div>
+
     </div>
     <script src="01app.js"></script>
 
