--- a/Vue/04lists.html
+++ b/Vue/04lists.html
@@ -12,6 +12,29 @@
             margin: 20px;
             display: inline-block;
         }
+
+        p, h3, ul {
+            margin: 0;
+            padding: 0;
+        }
+        body {
+            margin: 20px auto;
+            max-width: 960px;
+            background: yellow;
+        }
+        li {
+            background: #fff;
+            list-style-type: none;
+            margin: 20px auto;
+            padding: 10px 20px;
+            border-radius: 10px;
+            display: flex;
+            align-items: center;
+            justify-content:  space-between;
+        }
+        li.fav {
+            background: #ff9ed2;
+        }
     </style>
 
 </head>    
@@ -20,14 +43,17 @@
     <h1>Hello, Vue js</h1>
 
     <div id="app">
-        <!-- Attribute binding: look fot the VAR url, not the text url -->
+        <!-- Attribute binding: look fot the VAR url, not the text url 
+        v-bind: or :
+    -->
         <a v-bind:href="url">go to google</a>
 
         <div v-if="showBooks">
             <!--FOR CYCLE :bind inside for
                 <p> {{ books[1].title }} - {{books[1].author}} </p>--> 
             <ul>
-                <li v-for="x in books">
+                <li v-for="x in books" v-bind:class="{fav: x.isFav}">
+                    <!-- this will add the class isFav if is presented -->
                     <p> {{ x.title }} - {{x.author}} </p>
                     <img class="box" :src="x.image" :alt="x.title">
                 </li>
