--- a/crash/01.html
+++ b/crash/01.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-
-    <title>Document</title>
+    <link rel="stylesheet" href="01.css">
+    <title>Random User Generator</title>
   </head>
   <body>
-    <div id="app"></div>
+    
+    <div id="app">
+      <img :src="picture" :class="gender" alt="">
+      <h1>{{firstName}} {{lastName}}</h1>
+      <h3>{{email}}</h3>
+      <button :class="gender" @click="getUser()">Get Random User</button>
+    </div>
     <script src="01.js"></script>
   </body>
 </html>
